# kalamari-notes

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: release.yml
build-test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Kalamari.slnx  Kalamari.vcxproj  Kalamari.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  imgui_lib.vcxproj  imgui_lib.vcxproj.filters
docs/: index.html  script.js  style.css
src/: AppRenderer.cpp  AppRenderer.hpp  Config.cpp  Config.hpp  Editor.cpp  Editor.hpp  KalamariApp.cpp  KalamariApp.hpp  Markdown.cpp  Markdown.hpp  Sidebar.cpp  Sidebar.hpp  Theme.cpp  Theme.hpp  Vault.cpp  Vault.hpp  kalamari.rc  main.cpp
